2013-07-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/28262
	* parser.c (cp_parser_init_declarator): If we are parsing a typedef
	set parser->default_arg_ok_p to false before cp_parser_declarator.

2013-07-05  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/14263
	* class.c (build_base_path): Improve diagnostic.

2013-07-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/38634
	* decl.c (start_preparsed_function): Return a bool, false if
	push_template_decl fails.
	(start_function): Adjust.
	* cp-tree.h: Update.

2013-07-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/57771
	* parser.c (cp_parser_postfix_expression) <case RID_STATCAST>
	Temporarily set parser->greater_than_is_operator_p for
	cp_parser_expression and restore from saved value afterwards.

2013-06-28  Ed Smith-Rowland  <3dw4rd@verizon.net>

	* cp-tree.h (UDLIT_OP_ANSI_PREFIX): Remove space.
	* parser.c (cp_parser_operator()): Parse user-defined string
	literal as literal operator.

2013-06-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57645
	* class.c (deduce_noexcept_on_destructors): Save, set, and restore
	TYPE_HAS_NONTRIVIAL_DESTRUCTOR (t) around the main loop over the
	destructors.

2013-06-28  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* parser.c (cp_parser_array_notation): Removed rejection array notation
	of type function pointers. Added handling of array expressions when
	Cilk Plus is enabled.  Took out type-checking.
	(cp_parser_postfix_open_square_expression): Moved normal array expr.
	parsing into cp_parser_array_notation when cilkplus is enabled.
	(cp_parser_compound_statement): Removed expansion of array notations.
	(cp_parser_ctor_initializer_opt_and_function_body): Likewise.
	(cp_parser_function_definition_after_declarator): Likewise.
	(cp_parser_selection_statement): Removed error reporting.
	(cp_parser_iteration_statement): Likewise.
	(cp_parser_direct_declarator): Removed error checking/reporting if
	array notations are used in the declarator.